--- a/desmos_graphs.html
+++ b/desmos_graphs.html
@@ -11,9 +11,9 @@
             position: fixed;
             top: 0px;
             width: 100%;
-            margin-left: 0px auto;
+            margin-left: 0px;
             font-size: large;
-            display: block;
+            display: inline-block;
             max-height: 50px;;
         }
 
