renamed and edited things to run with GitHub pages

--- a/desmos_home.html
+++ b/desmos_home.html
@@ -34,7 +34,7 @@
         <div class="siteHeader">
             <a class="RefButton" href="desmos_home.html" style="background-color: rgb(55, 118, 235);">Home</a>
             <a class="RefButton" href="desmos_about.html">About</a>
-            <a class="RefButton" href="desmos_graphs.html">Graphs</a>
+            <a class="RefButton" href="index.html">Graphs</a>
         </div>
     </head>
 
