--- a/desmos_about.html
+++ b/desmos_about.html
@@ -32,9 +32,9 @@
 
     <head>
         <div class="siteHeader">
-            <a class="RefButton" href="desmos_home.html">Home</a>
+            <a class="RefButton" href="index.html">Home</a>
             <a class="RefButton" href="desmos_about.html" style="background-color: rgb(55, 118, 235);">About</a>
-            <a class="RefButton" href="index.html">Graphs</a>
+            <a class="RefButton" href="desmos_graphs.html">Graphs</a>
         </div>
     </head>
 
