changed the image header to make it scale properly

--- a/desmos_graphs.html
+++ b/desmos_graphs.html
@@ -130,7 +130,7 @@
         .bgImage {
             border-bottom: 3px solid black;
             width: 100%;
-            opacity: 0.75;
+            opacity: 1;
         }
 
         .graphDescription {
@@ -166,10 +166,7 @@
     <body style="background-color: white; margin: 0px;">
         
         <div class="graphTitle" id="graphTitle">
-            <image src="GraphBG3.png" class="bgImage">
-                <div class="title" id="title">Desmos Graphs</div>
-            </div>
-            
+            <image src="DesmosGraphBG2.png" class="bgImage">
         </div>
 
         <div class="graphDescription" id="graphDescription">
