added more images/made header better

--- a/desmos_about.html
+++ b/desmos_about.html
@@ -2,38 +2,166 @@
 
 <html>
     <style>
+
         .siteHeader {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: rgb(75, 138, 255);
-            position: absolute;
-            z-index: 100;
+            background-color: white;
             position: fixed;
             top: 0px;
+            z-index: 100;
             width: 100%;
-            margin-left: 0px;
             font-size: large;
-            display: inline-block;
-            max-height: 50px;;
+            display: flex;
+            max-height: 50px;
+            border-bottom: 3px solid black;
+            justify-content: center;
+        }
+
+        .Headerimg {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: white;
+            position: fixed;
+            top: 0px;
+            z-index: 101;
+            font-size: large;
+            display: flex;
+            max-height: 49px;
+            border-bottom: 3px solid black;
+            justify-content: left;
+            padding-left: 10%;
         }
 
         .RefButton:hover {
-            background-color: rgb(55, 118, 235);
+            color: rgb(50,187.5,200);
         }
 
         .RefButton {
             display: block;
             float: left;
-            padding: 14px 16px;
+            padding: 14px 55px;
             text-decoration: none;
             color: black;
             width: auto;
+            align-self: center;
         }
+
+        button {
+            font-size: large;
+            border: 0px solid black;
+            background-color: transparent;
+            outline: none;
+            padding: 0px 0px;
+        }
+        
+        .selectBtn {
+            background-color: transparent;
+            color: black;
+            padding: 16px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: large;
+        }
+
+        .selectBtn:hover {
+            color: rgb(50,187.5,200);
+            color: white;
+            padding: 16px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .ConfirmOverlay {
+            position: relative;
+            display: flex;
+            justify-content: center;
+        }
+
+        .ConfirmOverlay:hover .selectContent {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .selectContent {
+            display: none;
+            position: absolute;
+            background-color: white;
+            z-index: 1;
+            top: 49px;
+            border-left: 3px solid black;
+            border-bottom: 3px solid black;
+            border-right: 3px solid black;
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+        }
+
+        .selectContent a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .selectContent a:hover {
+            color: rgb(50,187.5,200);
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .calculator {
+            align-content: center;
+            width: auto;
+            margin: 20px;
+            border: 6px solid black;
+            border-radius: 5px;
+        }
+
+        .graphTitle {
+            font-family: Arial, Helvetica, sans-serif;
+            color: black;
+            margin-top: 50px;
+            margin-bottom: 0px;
+            text-align: center;
+            font-size: 120px;
+            font-weight: 700;
+            position: relative;
+        }
+
+        .title {
+            position: absolute;
+            text-align: center;
+            top: 40%;
+            bottom: 0px;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            min-width: 100%;
+            max-height: fit-content;
+        }
+
+        .bgImage {
+            border-bottom: 3px solid black;
+            width: 100%;
+            opacity: 100%;
+        }
+
+        .graphDescription {
+            font-family: Arial, Helvetica, sans-serif;
+            padding-left: 15%;
+            padding-top: 0px;
+        }
+
     </style>
 
     <head>
+
+        <image src="NatesGraphsLogo2.png" class="Headerimg" style="height: 50px; left: 0;"></image>
+
         <div class="siteHeader">
             <a class="RefButton" href="index.html">Home</a>
-            <a class="RefButton" href="desmos_about.html" style="background-color: rgb(55, 118, 235);">About</a>
+            <a class="RefButton" href="desmos_about.html" style="color: rgb(50,187.5,200);">About</a>
             <a class="RefButton" href="desmos_graphs.html">Graphs</a>
         </div>
     </head>
