Added descriptions, fixed headers, added recents.

--- a/desmos_about.html
+++ b/desmos_about.html
@@ -153,11 +153,17 @@
             padding-top: 0px;
         }
 
+        .AboutDescriptions {
+            padding-left: 20%; padding-right: 20%;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: x-large;
+        }
+
     </style>
 
     <head>
 
-        <image src="NatesGraphsLogo2.png" class="Headerimg" style="height: 50px; left: 0;"></image>
+        <a href="index.html"><image src="NatesGraphsLogo2.png" class="Headerimg" style="height: 50px; left: 0;"></image></a>
 
         <div class="siteHeader">
             <a class="RefButton" href="index.html">Home</a>
@@ -166,8 +172,29 @@
         </div>
     </head>
 
-    <body>
-        
+    <body style="background-color: white; margin: 0px;">
+        <image src="NatesGraphsLogoAbout.png" style="width: 100%; border-bottom: 5px solid black; padding-top: 50px"></image>
+        <div class="AboutDescriptions">
+            <h1 style="padding-top: 20px">Hi, I'm Nate!</h1>
+
+            <div>
+                I'm a student who loves science and math. In early 2021 I learned about a graphing calculator program 
+                called "Desmos," and started playing around with it. I soon found out how useful and powerful Desmos was, 
+                and began making more complex projects with it. This website is the culmination of my knowledge 
+                of math, Desmos, and website design (I had to make the website too).
+            </div>
+
+            <h1 style="padding-top: 20px">What is Desmos?</h1>
+
+            <div>
+                Desmos is a powerful math tool that can be used to solve various equations, graph things, create animations and art, 
+                and so much more. It's completely free, and all of the graphs featured here are made using it. You can learn more about 
+                Desmos <a href="https://www.desmos.com" style="text-decoration: none; color: rgb(50,187.5,200);">here</a>.
+            </div>
+
+            <div style="padding-top: 20px"></div>
+
+        </div>
     </body>
 </html>
     
