--- a/desmos_graphs.html
+++ b/desmos_graphs.html
@@ -157,10 +157,10 @@
     
     <head style="padding: 0; margin: 0;">
 
-        <script src="https://www.desmos.com/api/v1.7/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
+        <script src="https://www.desmos.com/api/v1.8/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 
-        <image src="NatesGraphsLogo2.png" class="Headerimg" style="height: 50px; left: 0;"></image>
+        <a href="index.html"><image src="NatesGraphsLogo2.png" class="Headerimg" style="height: 50px; left: 0;"></image></a>
 
         <div class="siteHeader">            
             <a class="RefButton" href="index.html">Home</a>
@@ -174,6 +174,8 @@
                     <a onclick="confirm(1)">Graphability</a>
                     <a onclick="confirm(2)">Desmos Pong</a>
                     <a onclick="confirm(3)">Color Wheel</a>
+                    <a onclick="confirm(4)">Star Simulator</a>
+                    <a>Coming Soon</a>
                 </div>
             </div>
         </div>
@@ -188,41 +190,16 @@
 
         <div class="graphDescription" id="graphDescription">
             <h1 id="descriptionHead"></h1>
-            <h2 id="descriptionTrue"></h2>
+            <div id="descriptionTrue" style="font-size: x-large;"></div>
         </div>
 
         <div class="calcContainer">
             <div class="calculator" id="calculator" style="height: 950px;"></div>
         </div>
 
+        <script src="graphs.js"></script>
+
         <script>
-            
-            const graphs = [
-                {
-                    Name: "No Graph Selected",
-                    Description: "",
-                    API_Link: "https://www.desmos.com/calculator/p95qpcz1va",
-                    True_Link: "https://www.desmos.com/calculator/p95qpcz1va"
-                },
-                {
-                    Name: "Graphability",
-                    Description: "Graphability Description",
-                    API_Link: "https://www.desmos.com/calculator/iqic0fv6qh",
-                    True_Link: "https://www.desmos.com/calculator/fo96wobara"
-                },
-                {
-                    Name: "Desmos Pong",
-                    Description: "Pong Description",
-                    API_Link: "https://www.desmos.com/calculator/2nd4g1javm",
-                    True_Link: "https://www.desmos.com/calculator/2nd4g1javm"
-                },
-                {
-                    Name: "Color Wheel",
-                    Description: "Color Wheel Description",
-                    API_Link: "https://www.desmos.com/calculator/lqibd1xi9e",
-                    True_Link: "https://www.desmos.com/calculator/tot7i3q2cm"
-                }
-            ]
 
             const elt = $("#calculator")[0]
             const calculator = Desmos.GraphingCalculator(elt, {lockViewport: true, expressions: false, settingsMenu: false})
