--- a/desmos_graphs.html
+++ b/desmos_graphs.html
@@ -150,6 +150,7 @@
         .graphDescription {
             font-family: Arial, Helvetica, sans-serif;
             padding-left: 15%;
+            padding-right: 15%;
             padding-top: 0px;
         }
 
