added a featured graph section

--- a/desmos_graphs.html
+++ b/desmos_graphs.html
@@ -219,6 +219,8 @@
                 } else {document.getElementById("descriptionHead").innerHTML = graphs[id].Name.toString()}
 
             }
+
+            confirm(window.location.search.split("=")[1])
         
         </script>
           
