I don't even remember what I did before committing

--- a/desmos_graphs.html
+++ b/desmos_graphs.html
@@ -176,6 +176,7 @@
                     <a onclick="confirm(2)">Desmos Pong</a>
                     <a onclick="confirm(3)">Color Wheel</a>
                     <a onclick="confirm(4)">Star Simulator</a>
+                    <a onclick="confirm(5)">Bouyancy Simulator</a>
                     <a>Coming Soon</a>
                 </div>
             </div>
